Bug 1133010. Update Fx family nav.
- Move from include to macro
- Add V2 for testing
- Update V1 copy & links
- Decrease vertical height
- Add to all pages linked from nav

--- a/bedrock/base/templates/macros.html
+++ b/bedrock/base/templates/macros.html
@@ -397,8 +397,6 @@ Add the macro:
 See the .js file for API:
     js/base/firefox-anniversary-video.js
 #}
-
-{# TODO: Replace with actual YouTube IDs. #}
 {%
 set video_locales = {
     'en-US': 'LtOGa5M8AuU',
@@ -451,4 +449,305 @@ set share_urls = {
     </div>
   </footer>
 </section>{#-- /#fx-anniversary-video-widget #}
+{%- endmacro %}
+
+{% macro fxfamilynav(navclass) %}
+{#
+1. Add to page:
+  a. Include this macro:
+    {% from "macros.html" import fxfamilynav with context %}
+
+  b. Remove old site_header:
+
+    {% block site_header %}{% endblock %}
+
+  c. Add new site_header_unwrapped, including this macro:
+
+    {% block site_header_unwrapped %}
+      {{ fxfamilynav() }}
+    {% endblock %}
+
+    If you need the dark text version (like for /firefox/partners), pass
+    in the 'dark' argument:
+
+    {% block site_header_unwrapped %}
+      {{ fxfamilynav('dark') }}
+    {% endblock %}
+
+    If you need a CTA in the sticky nav, call the macro and include
+    the CTA element:
+
+    {% block site_header_unwrapped %}
+      {% call fxfamilynav() %}
+        <a href="{{ url('firefox.new') }}">Download Firefox</a>
+      {% endcall %}
+    {% endblock %}
+
+  d. Kindly show tabzilla the door:
+
+    {% block tabzilla_css %}{% endblock %}
+    {% block tabzilla_js %}{% endblock %}
+
+
+2. Make sure necessary files are in your CSS/JS bundles:
+  a. CSS
+    'css/firefox/family-nav.less'
+
+  b. JS
+    'js/libs/jquery.waypoints.min.js',
+    'js/libs/jquery.waypoints-sticky.min.js',
+    'js/firefox/family-nav.js',
+
+  c. IE 9
+    IE 9 requires the matchMedia.addListener polyfill. If your page doesn't
+    already have a specific IE 9 bundle, you can use the generic one:
+
+    <!--[if IE 9]>
+    {% javascript 'matchmedia_addlistener' %}
+    <![endif]-->
+
+
+3. Initialize menu in your page's JS:
+  Quick example:
+
+  var fxNavConfig = {
+    primaryId: 'os', // id of primary nav item to highlight (REQUIRED)
+    subId: 'devices' // id of sub nav item to highlight (OPTIONAL)
+  };
+
+  Mozilla.FxFamilyNav.init(fxNavConfig);
+
+  Available nav/sub nav ID values:
+
+  desktop
+    - index
+    - trust
+    - customize
+    - fast
+  android
+    - index
+  os
+    - index
+    - devices
+    - partners
+
+  ## Notes on CTA:
+
+  CTA in sticky nav max dimensions are 160px w x 50px h. Anything over will be cut off.
+  Conform or feel the wrath of chopped off edges.
+
+  CTA is hidden in sticky nav at tablet (760px) breakpoint - just not enough
+  room (this may change in the future).
+
+  CTA is purposefully hidden for mobile.
+
+  ## Notes on tabzilla wordmark
+
+  By default, wordmark is transparent, which works for most pages. If you need to set
+  the color behind the transparent wordmark, just include CSS like the following on
+  your specific page:
+
+  .fxfamilynav-tabzilla:before {
+    background-color: #e840c0;
+  }
+#}
+
+<div id="fxfamilynav-wrapper">
+
+{# Temporary holding place for optional CTA. Will be moved to proper place after nav version is decided. #}
+<div id="fxfamilynav-cta-stager">{% if caller %}{{ caller() }}{% endif %}</div>
+
+<header id="fxfamilynav-header" class="fxfamilynav-header{% if (navclass) %} {{ navclass }}{% endif %}">
+  <div class="container">
+    <i class="fxfamilynav-logo">{{ _('Firefox') }}</i>
+    <nav id="fxfamilynav" class="fxfamilynav" role="navigation">
+      <ul id="fxfamilynav-primary" class="primarynav">
+        {# L10n: The <span> elements below are for visual formatting #}
+        <li>
+          <a href="{{ url('firefox.desktop.index') }}" class="primary-link" data-id="desktop"><div>{{ _('<span>for</span> Desktop') }}</div></a>
+
+          <ul class="subnav" id="desktop-subnav">
+            <li class="hassubsubnav">
+              <a href="{{ url('firefox.desktop.index') }}" data-id="desktop-index"><div>{{ _('Overview') }}</div></a>
+
+              <ul class="subsubnav" id="desktop-subsubnav">
+                <li><a href="{{ url('firefox.desktop.trust') }}" data-id="desktop-trust">{{ _('Trusted') }}</a></li>
+                <li><a href="{{ url('firefox.desktop.customize') }}" data-id="desktop-customize">{{ _('Flexible') }}</a></li>
+                <li><a href="{{ url('firefox.desktop.fast') }}" data-id="desktop-fast">{{ _('Fast') }}</a></li>
+              </ul>
+            </li>
+            <li><a href="{{ url('firefox.sync') }}" data-id="desktop-sync"><div>{{ _('Sync') }}</div></a></li>
+            <li><a href="{{ url('firefox.hello') }}" data-id="desktop-hello"><div>{{ _('Hello') }}</div></a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="{{ url('firefox.android.index') }}" class="primary-link" data-id="android"><div>{{ _('<span>for</span> Android') }}</div></a>
+
+          <ul class="subnav" id="android-subnav">
+            <li><a href="{{ url('firefox.android.index') }}" data-id="android-index"><div>{{ _('Overview') }}</div></a></li>
+            <li><a href="{{ url('firefox.sync') }}" data-id="android-sync"><div>{{ _('Sync') }}</div></a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="{{ url('firefox.os.index') }}" class="primary-link" data-id="os"><div>{{ _('OS') }}</div></a>
+
+          <ul class="subnav" id="os-subnav">
+            <li><a href="{{ url('firefox.os.index') }}" data-id="os-index"><div>{{ _('Overview') }}</div></a></li>
+            <li><a href="{{ url('firefox.os.devices') }}" data-id="os-devices"><div>{{ _('Devices') }}</div></a></li>
+            <li><a href="{{ url('firefox.partners.index') }}" data-id="os-partners"><div>{{ _('For partners') }}</div></a></li>
+            <li><a rel="external" href="https://marketplace.firefox.com/" data-id="os-marketplace"><div>{{ _('Marketplace') }}<i class="icon-external"></i></div></a></li>
+          </ul>
+        </li>
+      </ul>
+    </nav>{#-- /#fxfamillynav --#}
+
+    <div id="fxfamilynav-tertiarynav" class="fxfamilynav-tertiarynav">
+      {# the triangle needs a border, so :before content doesn't cut it #}
+      <div class="triangle"></div>
+      <div class="triangle-border"></div>
+
+      <ul class="tertiarynav" data-parent="desktop">
+        <li><a href="{{ url('firefox.dnt') }}" data-ga="desktop - dnt">{{ _('Do Not Track') }}</a></li>
+        <li><a href="{{ url('firefox.tiles') }}" data-ga="desktop - tiles">{{ _('Tiles') }}</a></li>
+        <li><a href="{{ url('firefox.interest-dashboard') }}" data-ga="desktop - interest dashboard">{{ _('Interest Dashboard') }}</a></li>
+        <li><a href="{{ url('firefox.developer') }}" data-ga="desktop - developer edition">{{ _('Developer Edition') }}</a></li>
+        <li><a rel="external" href="https://support.mozilla.org/kb/private-browsing-browse-web-without-saving-info" data-ga="desktop - private browsing">{{ _('Private Browsing') }}</a></li>
+        <li><a rel="external" href="https://addons.mozilla.org" data-ga="desktop - addons">{{ _('Add-ons') }}</a></li>
+        <li><a rel="external" href="https://support.mozilla.org/products/firefox" data-ga="desktop - support">{{ _('Need help?') }}</a></li>
+      </ul>
+
+      <ul class="tertiarynav" data-parent="android">
+        <li><a href="{{ url('firefox.dnt') }}" data-ga="android - dnt">{{ _('Do Not Track') }}</a></li>
+        <li><a rel="external" href="https://www.youtube.com/watch?v=Ewk0YtFTBec&amp;list=PLA8ABF6B7A66A0C5E&amp;index=15" data-ga="android - private browsing">{{ _('Private Browsing') }}</a></li>
+        <li><a rel="external" href="https://addons.mozilla.org/android/" data-ga="android - addons">{{ _('Add-ons') }}</a></li>
+        <li><a rel="external" href="https://support.mozilla.org/products/mobile" data-ga="android - support">{{ _('Need help?') }}</a></li>
+      </ul>
+
+      <ul class="tertiarynav" data-parent="os">
+        <li><a rel="external" href="https://blog.mozilla.org/blog/category/firefox-os/" data-ga="os - news">{{ _('News') }}</a></li>
+        <li><a rel="external" href="https://developer.mozilla.org/Firefox_OS" data-ga="os - developers">{{ _('For developers') }}</a></li>
+        <li><a rel="external" href="https://find.firefox.com" data-ga="os - find my device">{{ _('Find My Device') }}</a></li>
+        <li><a rel="external" href="https://support.mozilla.org/products/firefox-os" data-ga="os - support">{{ _('Need help?') }}</a></li>
+      </ul>
+    </div>{#-- /#fxfamilynav-tertiarynav --#}
+
+    {# Page will dictate CTA (button, usually) to be placed in this wrapper #}
+    <div id="fxfamilynav-cta-wrapper" class="fxfamilynav-cta-wrapper"></div>
+
+    <button type="button" id="fxfamilynav-tertiarynav-trigger" class="fxfamilynav-tertiarynav-trigger" aria-controls="fxfamilynav-tertiarynav">
+      <span>{{ _('Menu') }}</span>
+      <div class="trigger-dots">
+        <div class="trigger-dot"></div>
+        <div class="trigger-dot"></div>
+        <div class="trigger-dot"></div>
+      </div>
+    </button>
+
+    <div id="fxfamilynav-tabzilla" class="fxfamilynav-tabzilla"><a href="{{ url('mozorg.home') }}">{{ _('Mozilla') }}</a></div>
+  </div>{#-- /.container --#}
+</header>{#-- /#fxfamilynav-header --#}
+
+<header id="fxfamilynavV2-header" class="fxfamilynav-header{% if (navclass) %} {{ navclass }}{% endif %}">
+  <div class="container">
+    <i class="fxfamilynav-logo">{{ _('Firefox') }}</i>
+    <nav id="fxfamilynavV2" class="fxfamilynav" role="navigation">
+      <ul id="fxfamilynavV2-primary" class="primarynav">
+        <li id="desktops">
+          <a href="#" class="primary-link" data-id="desktops"><div>{{ _('For desktops &amp; laptops') }}</div></a>
+
+          <ul class="subnav" data-parent="desktops" id="desktops-subnav">
+            <li class="hassubsubnav">
+              <a href="{{ url('firefox.desktop.index') }}" data-id="desktops-index"><div>{{ _('Overview') }}</div></a>
+
+              <ul class="subsubnav" id="desktops-index-subnav">
+                <li><a href="{{ url('firefox.desktop.trust') }}" data-id="desktops-trust">{{ _('Trusted') }}</a></li>
+                <li><a href="{{ url('firefox.desktop.customize') }}" data-id="desktops-customize">{{ _('Flexible') }}</a></li>
+                <li><a href="{{ url('firefox.desktop.fast') }}" data-id="desktops-fast">{{ _('Fast') }}</a></li>
+              </ul>
+            </li>
+            <li><a href="{{ url('firefox.sync') }}" data-id="desktops-sync"><div>{{ _('Sync') }}</div></a></li>
+            <li><a href="{{ url('firefox.hello') }}" data-id="desktops-hello"><div>{{ _('Hello') }}</div></a></li>
+          </ul>{#-- /subnav-desktops --#}
+        </li>
+        <li id="mobiles">
+          <a href="#" class="primary-link" data-id="mobiles"><div>{{ _('For phones &amp; tablets') }}</div></a>
+
+          <ul class="subnav" data-parent="mobiles" id="mobiles-subnav">
+            <li class="hassubsubnav">
+              <a href="{{ url('firefox.android.index') }}" data-id="mobiles-android-index"><div>{{ _('Android') }}</div></a>
+
+              <ul class="subsubnav subsubnav-single" id="mobiles-android-subnav">
+                <li><a href="{{ url('firefox.sync') }}" data-id="mobiles-android-sync">{{ _('Sync') }}</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="{{ url('firefox.os.index') }}" class="primary-link" data-id="mobiles-os-index"><div>{{ _('Firefox OS') }}</div></a>
+
+              <ul class="subsubnav" id="mobiles-os-subnav">
+                <li><a href="{{ url('firefox.os.devices') }}" data-id="mobiles-os-devices">{{ _('Devices') }}</a></li>
+                <li><a href="{{ url('firefox.partners.index') }}" data-id="mobiles-os-partners">{{ _('For partners') }}</a></li>
+                <li><a rel="external" href="https://marketplace.firefox.com/" data-id="mobiles-os-marketplace">{{ _('Marketplace') }}<i class="icon-external"></i></a></li>
+              </ul>
+            </li>
+          </ul>{#-- /subnav-mobiles --#}
+        </li>
+      </ul>
+    </nav> {#-- /#fxfamillynav --#}
+
+    <div id="fxfamilynavV2-tertiarynav" class="fxfamilynav-tertiarynav">
+      {# the triangle needs a border, so :before content doesn't cut it #}
+      <div class="triangle"></div>
+      <div class="triangle-border"></div>
+
+      <ul class="tertiarynav" data-parent="desktops">
+        <li><a href="{{ url('firefox.dnt') }}" data-ga="V2 desktops - dnt">{{ _('Do Not Track') }}</a></li>
+        <li><a href="{{ url('firefox.tiles') }}" data-ga="V2 desktops - tiles">{{ _('Tiles') }}</a></li>
+        <li><a href="{{ url('firefox.interest-dashboard') }}" data-ga="V2 desktops - interest dashboard">{{ _('Interest Dashboard') }}</a></li>
+        <li><a href="{{ url('firefox.developer') }}" data-ga="V2 desktops - developer edition">{{ _('Developer Edition') }}</a></li>
+        <li><a rel="external" href="https://support.mozilla.org/kb/private-browsing-browse-web-without-saving-info" data-ga="V2 desktops - private browsing">{{ _('Private Browsing') }}</a></li>
+        <li><a rel="external" href="https://addons.mozilla.org" data-ga="V2 desktops - addons">{{ _('Add-ons') }}</a></li>
+        <li><a rel="external" href="https://support.mozilla.org/products/firefox" data-ga="V2 desktops - support">{{ _('Need help?') }}</a></li>
+      </ul>
+
+      <ul class="tertiarynav" data-parent="mobiles">
+        <li>
+          <div class="tertiarynav-heading">{{ _('Android') }}</div>
+
+          <ul>
+            <li><a href="{{ url('firefox.dnt') }}" data-ga="V2 mobiles - android - dnt">{{ _('Do Not Track') }}</a></li>
+            <li><a rel="external" href="https://www.youtube.com/watch?v=Ewk0YtFTBec&amp;list=PLA8ABF6B7A66A0C5E&amp;index=15" data-ga="V2 mobiles - android - private browsing">{{ _('Private Browsing') }}</a></li>
+            <li><a rel="external" href="https://addons.mozilla.org/android/" data-ga="V2 mobiles - android - addons">{{ _('Add-ons') }}</a></li>
+            <li><a rel="external" href="https://support.mozilla.org/products/mobile" data-ga="V2 mobiles - android - support">{{ _('Need help?') }}</a></li>
+          </ul>
+        </li>
+        <li>
+          <div class="tertiarynav-heading">{{ _('Firefox OS') }}</div>
+
+          <ul>
+            <li><a rel="external" href="https://blog.mozilla.org/blog/category/firefox-os/" data-ga="V2 mobiles - os - news">{{ _('News') }}</a></li>
+            <li><a rel="external" href="https://developer.mozilla.org/Firefox_OS" data-ga="V2 mobiles - os - developers">{{ _('For developers') }}</a></li>
+            <li><a rel="external" href="https://find.firefox.com" data-ga="V2 mobiles - os - find my device">{{ _('Find My Device') }}</a></li>
+            <li><a rel="external" href="https://support.mozilla.org/products/firefox-os" data-ga="V2 mobiles - os - support">{{ _('Need help?') }}</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div> {#-- /#fxfamilynav-tertiarynav --#}
+
+    {# Page will dictate CTA (button, usually) to be placed in this wrapper #}
+    <div id="fxfamilynavV2-cta-wrapper" class="fxfamilynav-cta-wrapper"></div>
+
+    <button type="button" id="fxfamilynavV2-tertiarynav-trigger" class="fxfamilynav-tertiarynav-trigger" aria-controls="fxfamilynav-tertiarynav">
+      <span>{{ _('Menu') }}</span>
+      <div class="trigger-dots">
+        <div class="trigger-dot"></div>
+        <div class="trigger-dot"></div>
+        <div class="trigger-dot"></div>
+      </div>
+    </button>
+
+    <div id="fxfamilynavV2-tabzilla" class="fxfamilynav-tabzilla"><a href="{{ url('mozorg.home') }}">{{ _('Mozilla') }}</a></div>
+  </div>{#-- /.container --#}
+</header>
+
+</div>{# --/#fxfamilynav-wrapper --#}
 {%- endmacro %}
