--- a/bedrock/firefox/templates/firefox/partners/index.html
+++ b/bedrock/firefox/templates/firefox/partners/index.html
@@ -2,6 +2,8 @@
  # License, v. 2.0. If a copy of the MPL was not distributed with this
  # file, You can obtain one at http://mozilla.org/MPL/2.0/. -#}
 
+{% from "macros.html" import fxfamilynav with context %}
+
 {% extends "base-resp.html" %}
 
 {% block page_title %}{{ _('Firefox OS, Marketplace, Android — Partners') }}{% endblock %}
@@ -43,9 +45,11 @@
 {% block site_header %}{% endblock %}
 
 {% block site_header_unwrapped %}
-  {% set fxfamilynav_class = 'dark' %}
-  {% include 'firefox/includes/family-nav.html' %}
+  {{ fxfamilynav('dark') }}
 {% endblock %}
+
+{% block tabzilla_css %}{% endblock %}
+{% block tabzilla_js %}{% endblock %}
 
 {% block content %}
   <nav id="partner-nav" role="navigation">
@@ -630,9 +634,5 @@
 </div>
 
 {% endblock %}
-
-{# family nav pages should not load Tabzilla #}
-{% block tabzilla_css %}{% endblock %}
-{% block tabzilla_js %}{% endblock %}
 
 {% block email_form %}{% endblock %}
