--- a/media/css/firefox/desktop/trust.less
+++ b/media/css/firefox/desktop/trust.less
@@ -4,9 +4,9 @@
 
 @import 'common.less';
 
-// set nav pointer
-#nav-main-trust {
-    .nav-pointer();
+// customize family nav
+.fxfamilynav-tabzilla:before {
+    background-color: @textColorSecondary;
 }
 
 .feature-list {
@@ -24,7 +24,7 @@
 }
 
 #intro {
-    background: #fcfcfa url(/media/img/firefox/desktop/bg-pixelfox.png) center bottom no-repeat;
+    background: #fcfcfa url(/media/img/firefox/desktop/bg-pixelfox-new.png) center bottom no-repeat;
     position: relative;
     z-index: 1;
 
