--- a/media/css/firefox/os/devices.less
+++ b/media/css/firefox/os/devices.less
@@ -109,6 +109,11 @@ html, body {
 #purchase-device-sticky {
     float: none;
     margin-top: 5px;
+    padding: 6px 20px;
+}
+
+html[lang^="en"] #purchase-device-sticky {
+    padding: 10px 20px;
 }
 
 .section-header {
