--- a/bedrock/firefox/templates/firefox/os/index-new.html
+++ b/bedrock/firefox/templates/firefox/os/index-new.html
@@ -2,6 +2,8 @@
  # License, v. 2.0. If a copy of the MPL was not distributed with this
  # file, You can obtain one at http://mozilla.org/MPL/2.0/. -#}
 
+{% from "macros.html" import fxfamilynav with context %}
+
 {% extends "firefox/base-resp.html" %}
 
 {% add_lang_files "firefox/os/devices" %}
@@ -42,8 +44,16 @@
 {% block site_header %}{% endblock %}
 
 {% block site_header_unwrapped %}
-  {% include 'firefox/includes/family-nav.html' %}
+  {% call fxfamilynav() %}
+    <div id="cta-sticky">
+      <a href="#email-form-wrapper" class="primary-cta-signup cta-button-small newsletter-signup-toggle hidden" role="button" aria-haspopup="true">{{_('Sign me up')}}</a>
+      <a href="#get-device" class="primary-cta-phone cta-button-small hidden" role="button" aria-haspopup="true">{{_('Get a phone')}}</a>
+    </div>
+  {% endcall %}
 {% endblock %}
+
+{% block tabzilla_css %}{% endblock %}
+{% block tabzilla_js %}{% endblock %}
 
 {% block content %}
   <main role="main">
@@ -59,10 +69,6 @@
               <p class="signup-txt">{{_('Sign up for our monthly newsletter and get the latest on Firefox OS')}}</p>
             </div>
             <a href="#get-device" class="primary-cta-phone cta-button get-phone hidden" role="button" aria-haspopup="true">{{_('Get a phone')}}</a>
-            <div id="cta-sticky">
-              <a href="#email-form-wrapper" class="primary-cta-signup cta-button-small newsletter-signup-toggle hidden" role="button" aria-haspopup="true">{{_('Sign me up')}}</a>
-              <a href="#get-device" class="primary-cta-phone cta-button-small hidden" role="button" aria-haspopup="true">{{_('Get a phone')}}</a>
-            </div>
           </div>
           <div class="phone-container">
             {{ high_res_img('firefox/os-new/homescreen/homescreen-2-0.png', {'l10n': True, 'alt': '', 'width': '495'}) }}
@@ -258,10 +264,6 @@
     </div>
   </div>
 {% endblock %}
-
-{# family nav pages should not load Tabzilla #}
-{% block tabzilla_css %}{% endblock %}
-{% block tabzilla_js %}{% endblock %}
 
 {% block site_js %}
   {% javascript 'firefox-resp' %}
