--- a/media/css/firefox/family-nav.less
+++ b/media/css/firefox/family-nav.less
@@ -9,30 +9,97 @@
 
 // mixin for sprite images
 .fxfamilynav-sprite(@top) {
-    background-image: url(/media/img/firefox/family/nav-sprite.png);
+    background-image: url(/media/img/firefox/family/nav-sprite5.png);
     background-position: 0 @top;
 
     @media (-webkit-min-device-pixel-ratio: 1.5),
        (                min-resolution: 1.5dppx),
        (                min-resolution: 144dpi) {
 
-        background-image: url(/media/img/firefox/family/nav-sprite-high-res.png);
-        .background-size(146px 273px);
+        background-image: url(/media/img/firefox/family/nav-sprite-high-res5.png);
+        .background-size(146px 297px);
     }
 }
 
-// adding this just to cache bust an image for bug 1139003
-.foo-bar {
-    font-size: inherit;
+// big left hand logo
+.fxfamilynav-logo {
+    float: left;
+    width: 140px;
+    height: 146px;
+    margin: 8px @baseLine 0 (@baseLine / 2);
+    .fxfamilynav-sprite(0);
+    .image-replaced();
+    .transition(-webkit-transform 0.3s ease);
+    .transition(transform 0.3s ease);
+
+    // Desktop wide
+    @media (min-width: @breakDesktopWide) {
+        margin-right: 75px;
+        margin-left: @baseLine;
+    }
+
+    // Tablet
+    @media (max-width: @breakDesktop) {
+        margin-right: @baseLine / 2;
+        margin-left: @baseLine / 2;
+    }
+
+    // Mobile
+    @media (max-width: @breakTablet) {
+        display: none;
+    }
+}
+
+// tabzilla link
+.fxfamilynav-tabzilla {
+    position: absolute;
+    top: -2px;
+    right: 0;
+    width: 146px;
+    height: 36px;
+
+    a {
+        display: block;
+        width: 100%;
+        height: 100%;
+        .fxfamilynav-sprite(-146px);
+        .image-replaced();
+        position: relative;
+        z-index: 10;
+
+        // switch to inverted tabzilla image
+        @media (max-width: @breakTablet) {
+            .fxfamilynav-sprite(-182px);
+        }
+    }
+
+    &:before {
+        content: '';
+        display: block;
+        width: 88px;
+        height: 26px;
+        background: transparent;
+        position: absolute;
+        left: 28px;
+        top: 0;
+        z-index: 9;
+    }
+}
+
+// change top border color to match inverted tabzilla image
+@media (max-width: @breakTablet) {
+    #outer-wrapper {
+        border-color: @mozIDBlue;
+    }
 }
 
 // <header> containing all family nav stuff: logo, tabzilla link, & <nav>
-#fxfamilynav-header {
+.fxfamilynav-header {
     .clearfix();
     position: relative;
     z-index: 10;
     width: 100%;
-    height: 210px;
+    height: 160px;
     border-top: 2px solid #fff;
     background-color: transparent;
     // Safari 5.1+, Chrome 10+
@@ -42,8 +109,8 @@
     background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)),
         linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5));
     background-repeat: no-repeat;
-    background-position: 0 0, 0 120px;
-    .background-size(100% 120px, 100% 90px);
+    background-position: 0 0, 0 80px;
+    .background-size(100% 80px, 100% 80px);
     .transition(background 0.2s ease);
 
     .container {
@@ -52,14 +119,24 @@
         padding: 0;
     }
 
-    // sub/tertiary navs hidden by default
-    .subnav,
+    // tertiary navs hidden by default
     .tertiarynav {
         display: none;
 
         &.active {
             display: block;
         }
+    }
+
+    // icon for external links
+    .icon-external {
+        .fxfamilynav-sprite(-218px);
+        position: relative;
+        top: 2px;
+        margin-left: 5px;
+        display: inline-block;
+        width: 13px;
+        height: 13px;
     }
 
     // Desktop Wide
@@ -92,81 +169,196 @@
     }
 }
 
-// <nav> element containing primary, sub, and tertiary navs
-#fxfamilynav {
+// <nav> element containing primary & sub navs
+.fxfamilynav {
+    position: relative;
     display: block;
     float: left;
     width: 592px;
-    height: 160px;
-    margin-top: 50px;
+    height: 150px;
+    margin-top: 10px;
 
+    // common to all navs - primary, sub, subsub
     ul {
-        .clearfix();
         display: block;
         list-style-type: none;
         margin: 0;
         padding: 0;
+    }
 
-        a {
-            display: table-cell;
-            vertical-align: middle;
-            color: #fff;
-            padding: 0 (@baseLine / 2);
-            border-bottom: 3px solid transparent;
-            .font-size(18px);
-            line-height: 1.3;
-            .transition(all 0.2s ease);
+    // specific to only primary & sub navs (not subsub navs)
+    .primarynav,
+    .subnav {
+        .clearfix();
 
-            &.selected {
-                border-color: #fff;
+        // only direct children <li>'s - don't affect subsubnav <li>'s
+        & > li {
+            .clearfix();
+            float: left;
+            margin: 0;
+            padding-right: @baseLine;
+
+            &:last-child {
+                padding-right: 0;
             }
 
-            &:hover,
-            &:focus {
-                text-decoration: none;
-            }
+            & > a {
+                display: block;
+                color: #fff;
+                padding: 0 5px;
+                border-bottom: 3px solid transparent;
+                .font-size(18px);
+                .transition(all 0.2s ease);
 
-            // "for" text
-            span {
-                .font-size(@largeFontSize);
-                font-style: italic;
-            }
-        }
+                &.selected {
+                    border-color: #fff;
+                }
 
-        &.primarynav a {
-            opacity: 0.7;
-            height: 67px;
+                &:hover,
+                &:focus {
+                    text-decoration: none;
+                }
 
-            &.selected,
-            &:hover {
-                opacity: 1;
-            }
-        }
+                // "for" text
+                span {
+                    .font-size(@largeFontSize);
+                    font-style: italic;
+                }
 
-        &.subnav a {
-            opacity: 0.8;
-            height: 87px;
-
-            &.selected,
-            &:hover {
-                opacity: 1;
+                // used for vertical centering
+                div {
+                    display: inline-block;
+                    line-height: 1.3;
+                    vertical-align: middle;
+                    font-style: normal;
+                }
             }
         }
     }
 
-    li {
+    .primarynav {
+        a {
+            opacity: 0.7;
+            height: 67px;
+            line-height: 67px;
+            // wide enough to fit 2 very long <li>'s, which works for
+            // V2 (2 <li>'s) and V1 (3 <li>'s, one of which is "OS" which
+            // is never very long (as far as i can tell)).
+            max-width: 300px;
+
+            &.selected,
+            &:hover {
+                opacity: 1;
+            }
+
+            &:focus + .subnav {
+                display: block;
+            }
+        }
+
+        // show subnav on hover (CSS only menu)
+        li {
+            &:hover,
+            &:focus,
+            &.active {
+                .subnav {
+                    display: block;
+                }
+            }
+        }
+    }
+
+    .subnav {
+        position: absolute;
+        top: 70px; // height of primary nav
+        left: 0;
+        display: none;
+        width: 100%;
+        height: 80px;
+        overflow: hidden;
+
+        & > li {
+            &.hassubsubnav {
+                border-right: 1px solid rgba(12, 153, 213, 0.3);
+                margin-right: 20px;
+                padding-right: 20px;
+            }
+
+            & > a {
+                float: left;
+                opacity: 0.8;
+                height: 77px;
+                line-height: 77px;
+                max-width: 125px; // uhhh, seems to work?
+
+                &.selected,
+                &:hover {
+                    opacity: 1;
+                }
+            }
+        }
+    }
+
+    .subsubnav {
+        display: none;
         float: left;
-        margin: 0 (@baseLine / 2) 0 0;
-        max-width: 138px;
+        margin: 9px 0 0 20px;
+
+        &.active {
+            display: block;
+        }
+
+        li {
+            margin: 0;
+            padding: 0;
+        }
+
+        a {
+            color: #fff;
+            opacity: 0.5;
+            .transition(all 0.2s ease);
+            .font-size(@baseFontSize);
+            line-height: 1.3;
+            text-decoration: none;
+
+            &:hover,
+            &.selected {
+                opacity: 1;
+            }
+
+            &.selected:before {
+                content: '';
+                width: 15px;
+                height: 16px;
+                display: inline-block;
+                .fxfamilynav-sprite(-257px);
+            }
+        }
+
+        &.subsubnav-single {
+            margin-top: 0;
+
+            a {
+                line-height: 80px;
+            }
+        }
     }
 
     // Desktop Wide
     @media (min-width: @breakDesktopWide) {
         width: 920px;
 
-        li {
-            max-width: 210px;
-            margin-right: @baseLine;
+        .primarynav a {
+            max-width: 300px;
+        }
+
+        .subnav > li.hassubsubnav {
+            margin-right: 40px;
+            padding-right: 40px;
+        }
+
+        .subsubnav {
+            margin-left: 40px;
         }
     }
 
@@ -174,13 +366,24 @@
     @media (max-width: @breakDesktop) {
         width: 556px;
 
-        ul a {
-            .font-size(@largeFontSize);
+        .primarynav,
+        .subnav {
+            & > li > a {
+                .font-size(@largeFontSize);
+            }
         }
 
-        li {
-            max-width: 129px;
-            margin-right: @baseLine / 2;
+        .primarynav a {
+            max-width: 210px;
+        }
+
+        .subnav > li.hassubsubnav {
+            padding-right: 20px;
+            margin-right: 20px;
+        }
+
+        .subsubnav {
+            margin-left: 20px;
         }
     }
 
@@ -192,37 +395,51 @@
         margin-top: 0;
         padding-top: 30px;
 
-        ul {
-            a {
+        // primary nav just stacks for mobile
+        .primarynav > li {
+            float: none;
+            margin: 0;
+            border-bottom: 1px solid rgba(187, 187, 187, 0.6);
+            padding-right: 0;
+
+            & > a {
                 display: block;
                 text-align: center;
                 color: @mozIDBlue;
-                padding: 14px @baseLine (@baseLine / 2);
+                padding: 6px @baseLine 4px;
                 .font-size(@largeFontSize);
                 line-height: @largeFontSize;
+                max-width: none;
+                opacity: 1;
+                height: auto;
+
+                &:focus + .subnav {
+                    display: none;
+                }
 
                 &.selected {
                     border-color: transparent;
                 }
             }
 
-            &.primarynav a {
-                opacity: 1;
-                height: auto;
+            &:hover,
+            &:focus,
+            &.active {
+                .subnav {
+                    display: none;
+                }
             }
-        }
-
-        li {
-            float: none;
-            max-width: none;
-            margin: 0;
-            border-bottom: 1px solid rgba(187, 187, 187, 0.6);
         }
     }
 }
 
-#fxfamilynav-subnav {
-    height: 90px;
+// en-* langs only get uppercase subsubnav links
+html[lang^='en'] .fxfamilynav .subsubnav a {
+    text-transform: uppercase;
+}
+
+.fxfamilynav-subnav {
+    height: 80px;
     overflow: hidden;
 
     // Mobile
@@ -230,11 +447,12 @@
         display: none;
     }
 }
-#fxfamilynav-tertiarynav {
+
+.fxfamilynav-tertiarynav {
     display: none;
     position: absolute;
     right: 2px;
-    top: 189px;
+    top: 145px;
     z-index: 10;
     height: auto;
     width: (238px - (@baseLine * 2));
@@ -267,14 +485,37 @@
         z-index: 1;
     }
 
-    ul a {
-        display: block;
-        padding: (@baseLine / 4) 0;
-        color: @mozIDBlue;
-        .font-size(@baseFontSize);
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
 
-        &:hover {
-            text-decoration: underline;
+        a {
+            display: block;
+            padding: (@baseLine / 4) 0;
+            color: @mozIDBlue;
+            .font-size(@baseFontSize);
+
+            &[rel="external"]:after {
+                opacity: 0;
+                position: relative;
+                content: '';
+                width: 13px;
+                height: 13px;
+                display: inline-block;
+                top: 2px;
+                margin-left: 5px;
+                .fxfamilynav-sprite(-284px);
+                .transition(all 0.2s ease);
+            }
+
+            &:hover {
+                text-decoration: underline;
+
+                &[rel="external"]:after {
+                    opacity: 1;
+                }
+            }
         }
     }
 
@@ -288,14 +529,14 @@
     }
 }
 
-#fxfamilynav-cta-wrapper {
+.fxfamilynav-cta-wrapper {
     opacity: 0;
     visibility: hidden;
     float: left;
     width: 160px;
     height: 50px;
     overflow: hidden;
-    margin: 140px (@baseLine * 1.5) 0 4px;
+    margin: 95px (@baseLine * 1.5) 0 4px;
     .transition(all 0.2s ease);
 
     // Desktop wide
@@ -310,7 +551,7 @@
 }
 
 // icon triggering show/hide of tertiary nav
-#fxfamilynav-tertiarynav-trigger {
+.fxfamilynav-tertiarynav-trigger {
     .clearfix();
     float: left;
     width: 36px;
@@ -318,7 +559,7 @@
     border-radius: 6px;
     background: transparent;
     color: @mozIDBlue;
-    margin-top: 150px;
+    margin-top: 106px;
     border: none;
     letter-spacing: 0px;
     background: transparent;
@@ -331,7 +572,7 @@
         .visually-hidden();
     }
 
-    #trigger-dots {
+    .trigger-dots {
         width: 22px;
         margin: 0 auto;
 
@@ -377,59 +618,10 @@
     }
 }
 
-#fxfamilynav-logo {
-    float: left;
-    width: 140px;
-    height: 146px;
-    margin: 38px @baseLine 0 (@baseLine / 2);
-    .fxfamilynav-sprite(0);
-    .image-replaced();
-    .transition(transform 0.3s ease);
-
-    // Desktop wide
-    @media (min-width: @breakDesktopWide) {
-        margin-right: 75px;
-        margin-left: @baseLine;
-    }
-
-    // Tablet
-    @media (max-width: @breakDesktop) {
-        margin-right: @baseLine / 2;
-        margin-left: @baseLine / 2;
-    }
-
-    // Mobile
-    @media (max-width: @breakTablet) {
-        display: none;
-    }
-}
-
-#fxfamilynav-tabzilla {
-    position: absolute;
-    top: -2px;
-    right: 0;
-    width: 146px;
-    height: 36px;
-    .fxfamilynav-sprite(-146px);
-    .image-replaced();
-
-    // switch to inverted tabzilla image
-    @media (max-width: @breakTablet) {
-        .fxfamilynav-sprite(-182px);
-    }
-}
-
-// change top border color to match inverted tabzilla image
-@media (max-width: @breakTablet) {
-    #outer-wrapper {
-        border-color: @mozIDBlue;
-    }
-}
-
 // State styles - sticky nav and dark text version
 
 // broken out for readability
-#fxfamilynav-header {
+.fxfamilynav-header {
     &.dark {
         ul {
             a.selected {
@@ -444,30 +636,16 @@
                 color: @mozIDGrey;
             }
         }
-    }
 
-    &.stuck {
-        position: fixed;
-        z-index: 200; // seems to be above everything on /firefox/partners...
-        .transform(translateY(-124px));
-        background: #fff;
-        background: rgba(255, 255, 255, 0.97);
-        background-image: none;
-        box-shadow: 0 1px 3px rgba(50, 50, 50, 0.4);
+        .subsubnav a {
+            color: #666;
 
-        #fxfamilynav-logo {
-            .transform(scale(0.5) translateY(106px));
-        }
-
-        ul.subnav a {
-            color: @mozIDGrey;
-
-            &.selected {
-                border-color: @mozIDBlue;
+            &.selected:before {
+                .fxfamilynav-sprite(-238px);
             }
         }
 
-        #fxfamilynav-tertiarynav-trigger {
+        .fxfamilynav-tertiarynav-trigger {
             .trigger-dot {
                 background: @mozIDBlue;
             }
@@ -480,9 +658,131 @@
             }
         }
 
-        #fxfamilynav-cta-wrapper {
+        @media (max-width: @breakTablet) {
+            ul.primarynav a.selected {
+                border-color: transparent;
+            }
+        }
+    }
+
+    &.stuck {
+        position: fixed;
+        z-index: 200; // seems to be above everything on /firefox/partners...
+        .transform(translateY(-84px));
+        background: #fff;
+        background: rgba(255, 255, 255, 0.97);
+        background-image: none;
+        box-shadow: 0 1px 3px rgba(50, 50, 50, 0.4);
+
+        .fxfamilynav-logo {
+            .transform(scale(0.46) translateY(88px));
+        }
+
+        .fxfamilynav .subnav {
+            & > li.hassubsubnav {
+                border-color: #d1d2d3;
+            }
+
+            a {
+                color: @mozIDGrey;
+
+                &.selected {
+                    border-color: @mozIDBlue;
+                }
+            }
+        }
+
+        .subsubnav a.selected:before {
+            .fxfamilynav-sprite(-238px);
+        }
+
+        .fxfamilynav-tertiarynav-trigger {
+            .trigger-dot {
+                background: @mozIDBlue;
+            }
+
+            &:hover,
+            &.active {
+                .trigger-dot {
+                    background: #fff;
+                }
+            }
+        }
+
+        .fxfamilynav-cta-wrapper {
             opacity: 1;
             visibility: visible;
+        }
+    }
+}
+
+// V2 SPECIFIC THINGS
+
+// temporary while testing 2 versions of the nav
+#fxfamilynav-wrapper {
+    position: relative;
+    // make sure nav sits atop any content that may be moved up with a negative top margin
+    z-index: 200;
+    display: block;
+    height: 162px;
+
+    @media (max-width: @breakTablet) {
+        height: auto;
+        opacity: 1;
+    }
+}
+
+#fxfamilynavV2-header {
+    display: none;
+
+    .tertiarynav[data-parent="mobiles"] > li:first-child {
+        margin-bottom: @baseLine;
+    }
+
+    .tertiarynav-heading {
+        color: @textColorTertiary;
+        padding-bottom: 4px;
+        border-bottom: 1px solid @textColorLight;
+    }
+
+    &.active {
+        display: block;
+    }
+
+    // only V1 shows for mobile (V2 doesn't have clickable top-level links)
+    @media (max-width: @breakTablet) {
+        display: none;
+
+        &.active {
+            display: none;
+        }
+    }
+}
+
+// when JS present, hide both navs initially so we can use JS
+// to determine which to show
+.js {
+    // make wrapper fade in nicely after nav is chosen
+    #fxfamilynav-wrapper {
+        opacity: 0;
+        .transition(all 0.25s ease);
+
+        &.active {
+            opacity: 1;
+        }
+    }
+
+    // hide V1
+    #fxfamilynav-header {
+        display: none;
+
+        &.active {
+            display: block;
+        }
+
+        // V1 shown for all mobiles
+        @media (max-width: @breakTablet) {
+            display: block;
         }
     }
 }
