--- a/bedrock/base/templates/includes/google-analytics.html
+++ b/bedrock/base/templates/includes/google-analytics.html
@@ -1,10 +1,16 @@
+
 <!-- Google Tag Manager -->
-<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-PF7MM9"
+
+<noscript>
+{% if settings.GTM_CONTAINER_ID %}
+<iframe src="//www.googletagmanager.com/ns.html?id={{settings.GTM_CONTAINER_ID}}"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-PF7MM9');</script>
+})(window,document,'script','dataLayer','{{settings.GTM_CONTAINER_ID}}');
+{% endif %}
+</script>
 <!-- End Google Tag Manager -->
 
