--- a/bedrock/base/templates/includes/google-analytics.html
+++ b/bedrock/base/templates/includes/google-analytics.html
@@ -1,11 +1,14 @@
 
 <!-- Google Tag Manager -->
-
 <noscript>
 {% if settings.GTM_CONTAINER_ID %}
 <iframe src="//www.googletagmanager.com/ns.html?id={{settings.GTM_CONTAINER_ID}}"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+height="0" width="0" style="display:none;visibility:hidden"></iframe>
+{% endif %}
+</noscript>
+<script>
+{% if settings.GTM_CONTAINER_ID %}
+(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
