--- a/bedrock/base/templates/includes/google-analytics.html
+++ b/bedrock/base/templates/includes/google-analytics.html
@@ -1,18 +1,16 @@
 
 <!-- Google Tag Manager -->
-<noscript>
-{% if settings.GTM_CONTAINER_ID %}
-<iframe src="//www.googletagmanager.com/ns.html?id={{settings.GTM_CONTAINER_ID}}"
-height="0" width="0" style="display:none;visibility:hidden"></iframe>
-{% endif %}
-</noscript>
+<!-- Customized for Mozilla.org-->
+<!-- Region Container: NONE -->
+<!-- Rollup Container: System Filtered -->
+<!-- Site Container: NONE -->
 <script>
 {% if settings.GTM_CONTAINER_ID %}
-(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','{{settings.GTM_CONTAINER_ID}}');
+(function(w,d,s,l,i,j,f,dl,k,q){
+  w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});f=d.getElementsByTagName(s)[0];
+  k=i.length;q='//www.googletagmanager.com/gtm.js?id=@&l='+(l||'dataLayer');
+  while(k--){j=d.createElement(s);j.async=!0;j.src=q.replace('@',i[k]);f.parentNode.insertBefore(j,f);}
+}(window,document,'script','dataLayer',['{{settings.GTM_CONTAINER_ID}}']));
 {% endif %}
 </script>
 <!-- End Google Tag Manager -->
